# quaca

./: CMakeLists.txt  README.md
app/Decay/: decay.cpp
app/Friction/: friction.cpp
data/: test.csv  test.json
docs/: README.md  _sidebar.md  gettingstarted.md
docs/tutorials/: first_calculation.md  mainfile.md  newfeature.md
include/: Quaca.h
plots/: plot.py
src/: CMakeLists.txt  version.cpp  version.h
src/Calculations/: Integrations.cpp
src/Friction/: Friction.cpp  Friction.h
src/GreensTensor/: GreensTensor.cpp  GreensTensor.h  GreensTensorPlate.cpp  GreensTensorPlate.h  GreensTensorPlateVacuum.cpp  GreensTensorPlateVacuum.h  GreensTensorVacuum.cpp  GreensTensorVacuum.h
src/Looper/: Looper.cpp  Looper.h  LooperFactory.h  LooperV.cpp  LooperV.h  LooperZa.cpp
src/MemoryKernel/: MemoryKernel.h  MemoryKernelFactory.cpp  OhmicMemoryKernel.cpp  SinglePhononMemoryKernel.cpp  SinglePhononMemoryKernel.h
src/Permittivity/: Permittivity.h  PermittivityDrude.cpp  PermittivityFactory.cpp  PermittivityFactory.h  PermittivityLorentz.cpp  PermittivityLorentz.h
src/Polarizability/: Polarizability.cpp
src/PowerSpectrum/: PowerSpectrum.cpp  PowerSpectrum.h
src/ReflectionCoefficients/: ReflectionCoefficients.h  ReflectionCoefficientsFactory.cpp  ReflectionCoefficientsLocBulk.cpp  ReflectionCoefficientsLocBulk.h  ReflectionCoefficientsLocSlab.cpp  ReflectionCoefficientsLocSlab.h
